@@ -1,5 +1,3 @@
-// compile: javac -source 14 --enable-preview *.java
-// run: java --enable-preview PayrollSystemTest
 
 public class PayrollSystemTest {
    public static void main(String[] args) {
@@ -8,21 +6,20 @@ public class PayrollSystemTest {
          new SalariedEmployee("John", "Smith", "111-11-1111", 800.00);    
       HourlyEmployee hourlyEmployee =                                     
          new HourlyEmployee("Karen", "Price", "222-22-2222", 16.75, 40);  
-      CommissionEmployee commissionEmployee =                             
-         new CommissionEmployee(                                          
-         "Sue", "Jones", "333-33-3333", 10000, .06);                      
-      BasePlusCommissionEmployee basePlusCommissionEmployee =             
-         new BasePlusCommissionEmployee(                                  
-         "Bob", "Lewis", "444-44-4444", 5000, .04, 300);                  
+
+      System.out.println("Employees processed individually:");
+
+      System.out.printf("%n%s%n%s: $%,.2f%n%n", 
+         salariedEmployee, "earned", salariedEmployee.earnings());
+      System.out.printf("%s%n%s: $%,.2f%n%n",
+         hourlyEmployee, "earned", hourlyEmployee.earnings());
 
       // create four-element Employee array
-      Employee[] employees = new Employee[4]; 
+      Employee[] employees = new Employee[2]; 
 
       // initialize array with Employees        
       employees[0] = salariedEmployee;          
       employees[1] = hourlyEmployee;            
-      employees[2] = commissionEmployee;        
-      employees[3] = basePlusCommissionEmployee;
 
       System.out.printf("Employees processed polymorphically:%n%n");
 
@@ -36,16 +33,15 @@ public class PayrollSystemTest {
             2. Syntax could change. 
             3. More future language enhancements: https://openjdk.java.net/projects/amber/
          */
-         // determine whether element is a BasePlusCommissionEmployee
-         if (currentEmployee instanceof BasePlusCommissionEmployee employee) {
-            // downcast Employee reference to BasePlusCommissionEmployee reference
-            //BasePlusCommissionEmployee employee = 
-            //   (BasePlusCommissionEmployee) currentEmployee;
+         // determine whether element is a SalariedEmployee
+         if (currentEmployee instanceof SalariedEmployee employee) {
+            // downcast Employee reference to SalariedEmployee reference
+            //SalariedEmployee employee = (SalariedEmployee) currentEmployee;
 
-            employee.setBaseSalary(1.10 * employee.getBaseSalary());
+            employee.setWeeklySalary(1.10 * employee.getWeeklySalary());
 
             System.out.printf("new base salary with 10%% increase is: $%,.2f%n",
-               employee.getBaseSalary());
+               employee.getWeeklySalary());
          } 
 
          System.out.printf("earned $%,.2f%n%n", currentEmployee.earnings());
